Adicionada a funcionalidade de soma
Atualmente somente a soma entre os gastos está escrita em código, mas devo utilizar o mesmo código para os ganhos. Pensando também, em posteriormente fazer uma refatoração, e criar uma função que seja chamada para os dois, para 'limpar o código'.

--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,20 @@
     <!-- Div com finalidade de adicionar as dívidas/gastos-->
     <div id="inputGastos">
         <input type="text" name="nomeGastos" id ="nomeGastos" class="botãoInput1" placeholder="Nome da Dívida"><br><br>
-        <input type="number" name="valorGastos" id="valorGastos" class="botãoInput1" placeholder ="Valor"><br><br>
+        <input type="number" name="valorGastos" id="valorGastos" class="botãoInput1" placeholder ="Valor Gasto"><br><br>
         <input type="button" value="Adicionar" onclick="adicionarGastos()"><br><br>
-    <div id="ganhos"></div>
+     <!-- Div com finalidade de adicionar o dinheiro recebido-->
+
+    <div id="ganhos">
+        <ul id="listaGanhos">
+        
+        </ul>
+    </div>
+    
     <div id="inputGanhos">
         <input type="text" name="nomeGanho" id="nomeGanho" class="botãoInput1" placeholder="Nome do Faturamento"><br><br>
         <input type="number" name="valorGanho" id="valorGanho" class="botãoInput1" placeholder="Valor Recebido"><br><br>
-        <input type="button" value="Adicionar"><br><br>
+        <input type="button" value="Adicionar" onclick="adicionarRecebidos()"><br><br>
     </div>
 </div>
 </body>
